--- a/TorF/project.properties
+++ b/TorF/project.properties
@@ -11,7 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:21
-android.library.reference.1=../../AndTinder
-android.library.reference.2=../../google-play-services_lib
-android.library.reference.3=../../BaseGameUtils
+target=android-19
+android.library.reference.1=../../../TorF_Game/AndTinder
+android.library.reference.2=../../../TorF_Game/BaseGameUtils
